--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,11 +3,30 @@
 @tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 @layer base {
-  :root {
-    --primaryc: #FF4219;
-  }
+	:root {
+		--primaryc: #ff4219;
+		--gray: #5e5e5e;
+	}
+
+	h3 {
+		@apply text-5xl font-semibold;
+	}
+
+	p {
+		@apply text-base;
+	}
+
+	.shadow-custom {
+		box-shadow:
+			-1px -1px 2px 0px #dbdbdb80 inset,
+			1px 1px 2px 0px #ffffff4d inset,
+			27px 27px 68px 0px #dbdbdbe5,
+			-27px -27px 54px 0px #ffffffe5,
+			27px -27px 54px 0px #dbdbdb33,
+			-27px 27px 54px 0px #dbdbdb33;
+	}
 }
