--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+* {
+	box-sizing: border-box;
+}
+
 body {
 	font-family: Arial, Helvetica, sans-serif;
 }
@@ -39,4 +44,18 @@ body {
 			27px -27px 54px 0px #dbdbdb33,
 			-27px 27px 54px 0px #dbdbdb33;
 	}
+
+  .underlined:before {
+    border: 4px solid transparent;
+    border-radius: 50%;
+    border-top-color: var(--primaryc);
+    bottom: -5px;
+    content: "";
+    height: 6px;
+    left: 0;
+    position: absolute;
+    transform: scaleX(1);
+    transform-origin: left;
+    width: 100%;
+}
 }
