--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,9 +12,19 @@
 		@apply text-primaryc text-3xl font-bold uppercase leading-[3rem] lg:text-5xl lg:leading-[5rem];
 	}
 
-	strong {
+	.strong {
 		@apply bg-primaryc p-2 text-white;
 	}
+
+
+@keyframes fadeIn {
+  0% { opacity: 0; transform: translateY(10px); }
+  100% { opacity: 1; transform: translateY(0); }
+}
+.animate-fadeIn {
+  animation: fadeIn 0.5s ease-out forwards;
+}
+
 
 	:root {
 		--primaryc: #f74444;
