--- a/src/ui/Header/Header.module.scss
+++ b/src/ui/Header/Header.module.scss
@@ -1,30 +1,30 @@
-.icon_wr {
-  svg {
-    width: 30px;
-    height: 30px;
-    fill: white;
+// .icon_wr {
+//   svg {
+//     width: 30px;
+//     height: 30px;
+//     fill: white;
 
-    path {
-      fill: white;
-    }
-  }
-}
+//     path {
+//       fill: white;
+//     }
+//   }
+// }
 
-.nav {
-  &:before {
-    background: var(--primaryc);
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -100;
-  }
-}
+// .nav {
+//   &:before {
+//     background: var(--primaryc);
+//     content: "";
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     position: absolute;
+//     z-index: -100;
+//   }
+// }
 
-.header {
-  width: 100%;
+// .header {
+//   width: 100%;
 
 
-}
+// }
